# semester2_lab1

./: CMakeLists.txt  main.cpp
Algorithm/: algorithm.cpp  algorithm.h
ConsoleUI/: Menu.cpp  Menu.h  Navigation.cpp  Options.h  State.h
Geometry/: Triangle.h  Vector.h
Options/Main/: mainCBs.h
Options/Settings/: settingsCBs.h  settingsItems.h  settingsOptions.h
Test/: Test.h  cases.h
